<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_800"
    android:paddingVertical="48dp">

    <Button
        android:id="@+id/btnStartOver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primary_950"
        android:fontFamily="sans-serif-black"
        android:paddingVertical="12dp"
        android:text="@string/btn_start_over"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/summary_bg"
        android:paddingHorizontal="20dp"
        android:paddingVertical="6dp"
        android:text="@string/summary"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_summarize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/result_gradient"
        android:orientation="vertical"
        android:paddingHorizontal="48dp"
        android:paddingVertical="120dp"
        app:layout_constraintBottom_toTopOf="@+id/btnStartOver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_home"
            android:fontFamily="@font/orbitron_bold"
            android:gravity="center_horizontal|center_vertical"
            android:maxLength="5"
            android:padding="32dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="48sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_xl"
        android:backgroundTint="@android:color/white"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato"
                android:text="@string/label_fuel"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato"
                android:text="@string/label_estimate_km"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato"
                android:text="@string/label_efficiency"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fuelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato"
                android:text="@string/label_fuel"
                android:textAlignment="center"
                android:textColor="@color/primary_950"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato"
                android:text="@string/label_estimate_km"
                android:textAlignment="center"
                android:textColor="@color/primary_950"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/efficiencyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lato"
                android:text="@string/label_efficiency"
                android:textAlignment="center"
                android:textColor="@color/primary_950"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>